--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           repository: "lame-incremental-text-adventure/lita"
           ref: ${{ inputs.branch }}
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
 
       - name: Install dependencies
         shell: bash
